@@ -22,6 +22,7 @@ typedef struct lnf_filter_node_s {
 	char *value;                /*buffer allocated for data */
 	int vsize;                  /* size of data in lvalue */
 	int type;                   /* data type for lvalue */
+	int numbits;                /* number of bits for IP adres */
 	lnf_oper_t oper;            /* operation */
 
 	struct lnf_filter_node_s *left;
@@ -37,9 +38,16 @@ typedef void* yyscan_t;
 /* error function for scanner */
 void yyerror(yyscan_t yyscanner, lnf_filter_t *filter, char *);
 
+/* conversion from string to numeric/bit value */
+int str_to_uint(char *str, int type, char **res, int *vsize);
+int str_to_addr(char *str, char **res, int *numbits);
 
+/* add new node into parse tree */
 lnf_filter_node_t* lnf_filter_new_leaf(yyscan_t scanner, char *fieldstr, lnf_oper_t oper, char *valstr);
 lnf_filter_node_t* lnf_filter_new_node(yyscan_t scanner, lnf_filter_node_t* left, lnf_oper_t oper, lnf_filter_node_t* right);
+
+/* evaluate filter */
+int lnf_filter_eval(lnf_filter_node_t *node, lnf_rec_t *rec);
 
 #endif /* _LNF_FILTER_H */
 
